<resources>
    <string name="app_name">Alhelal Academy</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="remember_password">Remember Password</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">alhelalacademysonagazi@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="roll">Roll:</string>
    <string name="demo_roll">50</string>
    <string name="name">Name:</string>
    <string name="demo_name">Ripat Rabbi</string>
    <string name="a">A</string>
    <string name="attendance">Attendance</string>
    <string name="view_all_students">View All Students</string>
    <string name="demo_count">100</string>
    <string name="view_all_teacher">View All Teacher</string>
    <string name="present_student">Present Student</string>
    <string name="absent_student">Absent Student</string>
    <string name="demo_class">Class Name</string>
    <string name="information">Information</string>
    <string name="fathers_name">Fathers Name:</string>
    <string name="mothers_name">Mothers Name:</string>
    <string name="address">Address:</string>
    <string name="demo_add">Feni</string>
    <string name="phone">Phone:</string>
    <string name="demo_num">01825909842</string>
    <string name="dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="select_section">Select Section</string>
    <string name="select_date">Select Date</string>
    <string name="_2nd_period">2nd Period :</string>
    <string name="select_period">Select Period</string>
    <string name="custom_message_to_guardian">Custom Message to Guardian</string>
    <string name="write_message">Write Message</string>
    <string name="send">Send</string>
    <string name="class1">Class</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="select_teacher">Select Teacher</string>
    <string name="log_out">Log Out</string>
    <string name="exit">Exit</string>
    <string name="website">Website</string>
    <string name="al_helal_academy">Al Helal Academy</string>
    <string name="total_student">Total Student:</string>
    <string name="_0">0</string>
    <string name="commnet">Comment</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="verifyF">Verify your number</string>
    <string name="verifyT">A code is sent to your number, please check messages and enter here.</string>
    <string name="code">Code</string>
    <string name="verbtn">Verify</string>
    <string name="set_password">Set Password</string>
    <string name="verification_code">Verification Code</string>
    <string name="downloding_all_data">Downloding All Data…</string>
    <string name="select_class">Select Class</string>
    <string name="total_teacher">Total Teacher:</string>
    <string name="today">Today</string>
    <string name="submit">Submit</string>
    <string name="no_offline_attendance">Offline attendance not found</string>
    <string name="offline_attend">Offline Attendance</string>
    <string name="date">Date:</string>
    <string name="time">; Time:</string>
    <string name="upload">Upload Attendance</string>
    <string name="student_leave">Student Leave</string>
    <string name="id">Student ID:</string>
    <string name="download_students">Download Students</string>
    <string name="download_teacher">Download Teacher</string>
    <string name="download_class">Download Class</string>
    <string name="download_section">Download Section</string>
    <string name="download_period">Download Period</string>
    <string name="attendance_update">Attendance Update</string>
    <string name="go">Go</string>
    <string name="online_attendance">Online Attendance</string>
    <string name="select_roll">Select Roll</string>
    <string name="teacher_attendance">Teacher Attendance</string>
    <string name="teacher_come">Teacher Coming Time</string>
    <string name="teacher_leave">Teacher Leaving Time</string>
    <string name="_10_20">10:20</string>
    <string name="start">Start</string>
    <string name="absent">Absent</string>
    <string name="end">End</string>
    <string name="left">Left</string>
    <string name="teacher_gap">Teacher Gap</string>
    <string name="present_teacher">Present Teacher</string>
    <string name="absent_teacher">Absent Teacher</string>
    <string name="teacher_leave1">Teacher Leave</string>
    <string name="view_by_date">View by Date</string>
    <string name="download_subject_priority">Download Subject Priority</string>
    <string name="update">Update</string>
    <string name="view_all">View All</string>

    <string name="agora_app_id" translatable="false">897cdb3a3b4a4d06bf002959d7528c3c</string>
    <string name="agora_app_certificate" translatable="false">81777ac9ee5a435381091df3666b125a</string>
    <string name="channelName">alhelal_ch</string>
    <string name="receiving_call">Incoming&#8230;</string>
    <string name="calling_out">Calling&#8230;</string>
    <string name="peer_not_online">Peer has not logged on</string>
    <string name="need_necessary_permissions">Necessary permissions acquired</string>
    <string name="make_onine_call">Make Online Audio Call</string>
    <string name="make_offline_call">Make Offline Call</string>
    <string name="make_online_video_call">Make Online Video Call</string>
    <string name="message_wrong_number">Wrong Peer number</string>
    <string name="str_send">SEND</string>
    <string name="single_input">Single Line Input</string>
    <string name="channel_title">%s(%d)</string>
    <string name="join_channel_failed">Join Channel Failed</string>
    <string name="message_cached">Message cached by server</string>
    <string name="peer_offline">Peer is Offline</string>
    <string name="send_msg_failed">Send message failed</string>
</resources>